@@ -2,7 +2,7 @@ package no.nav.tag.tiltaksgjennomforing.varsel.oppgave;
 
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
-import no.nav.tag.tiltaksgjennomforing.avtale.Tiltakstype;
+import no.nav.tag.tiltaksgjennomforing.avtale.Avtale;
 import no.nav.tag.tiltaksgjennomforing.exceptions.GosysFeilException;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
@@ -12,8 +12,7 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.net.URI;
-import java.util.Arrays;
-import java.util.UUID;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -31,14 +30,14 @@ public class OppgaveVarselService {
         this.azureRestTemplate = azureRestTemplate;
     }
 
-    public void opprettOppgave(String aktørId, Tiltakstype tiltakstype, UUID avtaleId) {
-        OppgaveRequest oppgaveRequest = new OppgaveRequest(aktørId, tiltakstype);
+    public void opprettOppgave(String aktørId, Avtale avtale) {
+        OppgaveRequest oppgaveRequest = new OppgaveRequest(aktørId, avtale);
         OppgaveResponse oppgaveResponse;
 
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.set(CORR_ID, avtaleId.toString());
+        headers.set(CORR_ID, avtale.getId().toString());
 
         try {
             oppgaveResponse = azureRestTemplate.postForObject(
@@ -47,12 +46,12 @@ public class OppgaveVarselService {
                 OppgaveResponse.class
             );
         } catch (Exception e2) {
-            log.error("Kall til Oppgave feilet, avtaleId={} : {}", avtaleId, e2.getMessage());
+            log.error("Kall til Oppgave feilet, avtaleId={} : {}", avtale.getId(), e2.getMessage());
             throw new GosysFeilException();
         }
-        log.info("Opprettet oppgave for tiltak {}. OppgaveId={}, avtaleId={}", tiltakstype.getBeskrivelse(), oppgaveResponse.getId(), avtaleId);
+        log.info("Opprettet oppgave for tiltak {}. OppgaveId={}, avtaleId={}", avtale.getTiltakstype().getBeskrivelse(), oppgaveResponse.getId(), avtale.getId());
     }
-    
+
     @Data
     static class OppgaveResponse {
         private String id;
